fixing some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 #games h1 {
-  margin-top: 80px;
+  margin-top: 50px;
 }
 
 #games h1, h3 {
@@ -126,6 +126,16 @@ section img {
 #outlast img {
   display: block;
   margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+#hotline iframe,
+#bioshock iframe,
+#left_4_dead_2 iframe,
+#super_mario_galaxy iframe,
+#outlast iframe {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* Movie-specific styles */
@@ -137,4 +147,15 @@ section img {
 #hachi img {
   display: block;
   margin: 0 auto;
+  margin-bottom: 10px;
+}
+
+#oceans11 iframe,
+#silentvoice iframe,
+#walle iframe,
+#spiderverse iframe,
+#darkknight iframe,
+#hachi iframe {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
